# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "website"
version = "0.1.0"
edition = "2021"

[lib]
path="src/lib.rs"

[[bin]]
path="src/main.rs"
name="website"

[dependencies]
actix-web = "4.3.1"
clippy = "0.0.302"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"]}

[dev-dependencies]
reqwest = "0.11.14"

